--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- FONTAWSOME -->
     <link rel="stylesheet" href="asset/css/all.min.css">
     <!-- font -->
-    <link rel="stylesheet" href="asset/font/stylesheet.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <!-- aos animation -->
     <link rel="stylesheet" href="asset/css/aos.css">
     <!-- css -->
