--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- swiper slider -->
     <link rel="stylesheet" href="asset/css/swiper-bundle.min.css" />
     <!-- FONTAWSOME -->
-    <link rel="stylesheet" href="asset/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <!-- font -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <!-- aos animation -->
